--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- Introduction Section -->
   <section id="home">
     <div class="intro">
-      <h1>Hello, I'm <span>Your Name</span></h1>
+      <h1>Hello, I'm <span>Siva Durshika</span></h1>
       <p>Welcome to my portfolio. Explore my journey, skills, projects, and more!</p>
     </div>
   </section>
@@ -37,7 +37,7 @@
   <section id="about" class="section-padding">
     <div class="container">
       <h2>About Me</h2>
-      <p>I am a passionate developer with a focus on [Your Area of Expertise]. I strive to create innovative solutions that have a meaningful impact.</p>
+      <p>I am a passionate developer with a focus on Web Development . I strive to create innovative solutions that have a meaningful impact.</p>
     </div>
   </section>
 
@@ -46,20 +46,21 @@
     <div class="container">
       <h2>Education</h2>
       <ul>
-        <li><strong>Degree</strong> | Institution | Graduation Year</li>
-        <li><strong>Course Name</strong> | Institution | Year</li>
+        <li><strong>B.Tech in Information Technology</strong> | Arunachala College Of Engineering For Women| 2023-2027</li>
+        
       </ul>
     </div>
   </section>
 
-  <!-- Projects Section -->
-  <section id="projects" class="section-padding">
+  <!-- Challenge Completed-->
+  <section id="Challenge Completed" class="section-padding">
     <div class="container">
-      <h2>Projects</h2>
-      <div class="project-card">
-        <h3>Project Title</h3>
-        <p>Description of the project.</p>
-        <a href="link-to-project">View Project</a>
+      <h2>Challenge Completed</h2>
+      <div class="challenge-card">
+        <h3>SAWIT.AI Challenge</h3>
+        <p> Learned to write and execute machine learning codes and develop AI models that solve real-time problems. From data preprocessing to building models and optimizing results, I dove deep into practical AI workflows that solidified my knowledge in this field.
+</p>
+        <a href="https://www.linkedin.com/posts/siva-durshika-g-86141030a_ai-machinelearning-sawitaichallenge-activity-7254468844507856896-0FNB?utm_source=share&utm_medium=member_android">View my Challenge Completion</a>
       </div>
       <!-- Repeat for other projects -->
     </div>
@@ -70,10 +71,10 @@
     <div class="container">
       <h2>Skills</h2>
       <ul class="skills-list">
-        <li><span>HTML</span></li>
-        <li><span>CSS</span></li>
-        <li><span>JavaScript</span></li>
-        <li><span>React</span></li>
+        <li><span>HTML,CSS, JavaScript</span></li>
+        <li><span>UI UX Design</span></li>
+        <li><span>Generative AI</span></li>
+        <li><span>Public Speaking</span></li>
       </ul>
     </div>
   </section>
@@ -83,8 +84,8 @@
     <div class="container">
       <h2>Achievements & Awards</h2>
       <ul>
-        <li>Title of Award | Year</li>
-        <li>Achievement Description | Year</li>
+        <li>Ideathon | 2023</li>
+        <li>Presented my innovative idea in an understandable manner and won Third Prize in my First Year. | 2023</li>
       </ul>
     </div>
   </section>
