--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#education">Education</a></li>
-          <li><a href="#projects">Projects</a></li>
+          <li><a href="#Challenge">Projects</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#awards">Awards</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#contact me">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -55,7 +55,7 @@
   <!-- Challenge Completed-->
   <section id="Challenge Completed" class="section-padding">
     <div class="container">
-      <h2>Challenge Completed</h2>
+      <h2>Challenge Completed in Generative AI</h2>
       <div class="challenge-card">
         <h3>SAWIT.AI Challenge</h3>
         <p> Learned to write and execute machine learning codes and develop AI models that solve real-time problems. From data preprocessing to building models and optimizing results, I dove deep into practical AI workflows that solidified my knowledge in this field.
@@ -85,7 +85,7 @@
       <h2>Achievements & Awards</h2>
       <ul>
         <li>Ideathon | 2023</li>
-        <li>Presented my innovative idea in an understandable manner and won Third Prize in my First Year. | 2023</li>
+        <li>Presented my innovative idea and won Third Prize for this Hackathon. | @1st year</li>
       </ul>
     </div>
   </section>
