--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <section id="home">
     <div class="intro">
       <h1>Hello, I'm <span>Siva Durshika</span></h1>
-      <p>Welcome to my portfolio. Explore my journey, skills, projects, and more!</p>
+      <p>Welcome to my portfolio. Explore my journey, skills, challenge, and more!</p>
     </div>
   </section>
 
